# openarm_orca_stack

./: .gitignore  LICENSE  README.md  verify_structure.sh
assembly_description/: CMakeLists.txt  README.md  package.xml
assembly_description/launch/: view_robot.launch.py
assembly_description/rviz/: default.rviz
assembly_description/urdf/: assembly.urdf  assembly_explicit.urdf  assembly_flat.urdf.xacro  assembly_params.xacro
connectors_description/: CMakeLists.txt  package.xml
connectors_description/meshes/: Connector.stl
connectors_description/urdf/: Connector.urdf  connector.urdf.xacro
openarm_description/urdf/body/: openarm_body.xacro
openarm_description/urdf/robot/: openarm_robot.xacro
orcahand_description/: CMakeLists.txt  package.xml
orcahand_description/models/urdf/: orcahand_left.urdf  orcahand_left_extended.urdf  orcahand_right.urdf  orcahand_right_extended.urdf
