<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypes="xsd"?>
<package format="3">
  <name>assembly_description</name>
  <version>0.0.1</version>
  <description>Complete assembly of OpenArm with ORCA hands and connectors</description>
  <maintainer email="your@email.com">ORBIT Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <exec_depend>openarm_description</exec_depend>
  <exec_depend>orcahand_description</exec_depend>
  <exec_depend>connectors_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>