<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>connectors_description</name>
  <version>0.1.0</version>
  <description>URDF/Xacro and meshes for mounting connectors</description>
  <maintainer email="openarm_dev@enactic.ai">Enactic, Inc.</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



